syntax = "proto3";

/*************************************************/
/******** Main messages that will be sent ********/
/*************************************************/

message controlConfig {
    // The main firing trigger that requests a dart out the barrel, ASAP
    int32 triggerSwitchPin = 1;
    SwitchOrientation TriggerSwitchOrientation = 2;
    // An optional switch that requests the flywheels rev up to full (or idle? partial?) speed
    int32 optRevSwitchPin = 3;
    SwitchOrientation optRevSwitchOrientation = 4;
    // Which button is this?
    int32 buttonPin = 5;
    // This is internally routed on Detlaff; you probably don't want to touch it
    // Is there any reason a user should want to touch this?
    int32 batteryAdcPin = 6;
}

/*************************************************/
/************** Enums and sub-types **************/
/*************************************************/

enum SwitchOrientation {
    SWITCH_NORMALLY_OPEN = 0;
    SWITCH_NORMALLY_CLOSED = 1;
}
